client/list.css
body {
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-weight: 200;
	font-size: 2.5em;
    padding: 0;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -o-user-select: none;
    user-select: none;
	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
	box-sizing: border-box;
}

a {
	color: inherit;
	text-decoration: none;
	border-style: none none dashed none;
	border-width: 1px;
	border-color: #333;
}

#outer {
	margin: 0 auto; 
}

.thingInput {
	vertical-align: text-top !important;
	box-sizing: border-box !important;
	font-size: .75em !important;
	width: 100% !important;
}

.thingContainer .name {	
	border-style: none;
	height: 55px;
}

.struck {
	text-decoration: line-through;	
}

.delete {
	float: left;
	border-style: none dashed none none;
	border-color: #ccc;
	border-width: 2px;
	padding-right: 5px;
	margin-right: 5px;	
}

.strike {
	float: left;
	border-style: none dashed none none;
	border-color: #ccc;
	border-width: 2px;
	padding-right: 5px;
	margin-right: 5px;	
}

.delete a {
	color: inherit;
	text-decoration: none;
	border-style: none;
}

.strike a {
	color: inherit;
	text-decoration: none;
	border-style: none;
}

.deleteImage {
	vertical-align: middle;	
}

.none {
	color: #777;
}

@media screen and (max-width: 480px)  
{
	.delete { display: none; }
	.strike { display: none; }
	.thingContainer{
		border-style: none none dashed none;
		border-color: #ccc;
		border-width: 2px;		
	}
}

##All below for stupid moving guide to swiping##
.animated{
	-webkit-animation-fill-mode:both;
	-moz-animation-fill-mode:both;
	-ms-animation-fill-mode:both;
	-o-animation-fill-mode:both;
	animation-fill-mode:both;
	-webkit-animation-duration:1s;
	-moz-animation-duration:1s;
	-ms-animation-duration:1s;
	-o-animation-duration:1s;
	animation-duration:1s;
}

.animated.hinge{
	-webkit-animation-duration:2s;
	-moz-animation-duration:2s;
	-ms-animation-duration:2s;
	-o-animation-duration:2s;
	animation-duration:2s;
}

@-webkit-keyframes shake {
	0%, 100% {-webkit-transform: translateX(0);}	
	10%, 30%, 50%, 70%, 90% {-webkit-transform: translateX(-10px);}
	20%, 40%, 60%, 80% {-webkit-transform: translateX(10px);}
}

@-moz-keyframes shake {
	0%, 100% {-moz-transform: translateX(0);}
	10%, 30%, 50%, 70%, 90% {-moz-transform: translateX(-10px);}
	20%, 40%, 60%, 80% {-moz-transform: translateX(10px);}
}

@-o-keyframes shake {
	0%, 100% {-o-transform: translateX(0);}
	10%, 30%, 50%, 70%, 90% {-o-transform: translateX(-10px);}
	20%, 40%, 60%, 80% {-o-transform: translateX(10px);}
}

@keyframes shake {
	0%, 100% {transform: translateX(0);}
	10%, 30%, 50%, 70%, 90% {transform: translateX(-10px);}
	20%, 40%, 60%, 80% {transform: translateX(10px);}
}

.shake {
	-webkit-animation-name: shake;
	-moz-animation-name: shake;
	-o-animation-name: shake;
	animation-name: shake;
    -webkit-animation-duration: 2s;
    -webkit-animation-delay: 1s;
    -webkit-animation-iteration-count: 1;	
}

